# ai-chatbot

./: pyproject.toml
ai_chatbot/llm/: conversational.py  stateless.py
ai_chatbot/prompts/: gpt_35_0125.py
data/products/: product_list.txt
notebooks/: AI powered chatbot - master.ipynb  AI powered chatbot.ipynb
streamlit-app/: home.py
